--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-node6": "^0.4.0",
-    "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-config-standard": "^11.1.3",
     "rimraf": "^2.6.1"
   }
 }
