--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,18 @@
 {
   "env": {
-    "node": {
-      "presets": [ "es2015-node6" ],
-      "plugins": [
-        "add-module-exports"
-      ]
-    },
     "cjs": {
-      "presets": [ "es2015" ],
+      "presets": [
+        [ "@babel/env", { "shippedProposals": true } ]
+      ],
       "plugins": [
         "add-module-exports"
       ]
     },
-    "es": {
-      "presets": [ "./babel/preset" ]
+
+    "esm": {
+      "presets": [
+        [ "@babel/env", { "modules": false, "shippedProposals": true } ]
+      ]
     }
   }
 }
