--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "redux-rest-factories",
   "version": "0.0.3",
   "description": "",
-  "main": "index.js",
-  "jsnext:main": "es/index.js",
+  "main": "./index",
+  "jsnext:main": "./index.mjs",
+  "module": "./index.mjs",
   "scripts": {
-    "clean": "rimraf *.js es lib dist",
-    "lint": "eslint src",
-    "build": "npm run build:cjs && npm run build:es",
+    "clean": "rimraf *.js *.mjs",
+    "lint": "eslint src --ext mjs",
+    "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "BABEL_ENV=cjs babel src --out-dir .",
-    "build:es": "BABEL_ENV=es babel src --out-dir es",
+    "build:esm": "BABEL_ENV=esm babel src --keep-file-extension --out-dir .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run clean && npm run lint && npm run build",
     "preversion": "npm run lint"
@@ -29,16 +30,20 @@
     "url": "https://github.com/lohfu/redux-rest-factories/issues"
   },
   "homepage": "https://github.com/lohfu/redux-rest-factories#readme",
-  "dependencies": {
-    "lowline": "^0.1.4"
-  },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2015-node6": "^0.4.0",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^11.1.3",
-    "rimraf": "^2.6.1"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "lowline": "^0.2.2",
+    "rimraf": "^2.6.3"
+  },
+  "dependencies": {
+    "eslint-plugin-import": "^2.17.2"
   }
 }
